# circe

./: CHANGELOG.md  Cargo.toml  README.md
bytecode/: Cargo.toml
bytecode/src/: register.rs
ccec/: Cargo.toml
ccec/examples/: hello_basic.cce
ccec/src/: main.rs
core/cce-ast/: Cargo.toml
core/cce-ast/src/: lexer.rs  lib.rs  parser.rs  stream.rs
core/cce-ast/tests/: parse.rs  test_examples.rs  test_lexer.rs  test_lowlevel.rs  test_parser.rs  test_stream.rs
core/cce-lowlevel/: Cargo.toml
core/cce-lowlevel/src/: lexer.rs  lib.rs  parser.rs
core/cce-lowlevel/tests/: test_lexer.rs  test_parse.rs  test_parser.rs
core/cce-stream/: Cargo.toml
core/cce-stream/src/: lib.rs
core/cce-stream/tests/: test_convert.rs  test_stream.rs
core/circelang-hash/: Cargo.toml
core/circelang-hash-proc/: Cargo.toml
core/circelang-hash-proc/src/: lib.rs
core/circelang-hash/src/: lib.rs
database/cce-dbmodel/: Cargo.toml
database/cce-dbmodel-proc/: Cargo.toml
database/cce-dbmodel-proc/src/: lib.rs
database/cce-dbmodel/src/: lib.rs  model.rs
database/cce-dbmodel/tests/: test_custom.rs
inference/cce-infer/: Cargo.toml
inference/cce-infer-ast/: Cargo.toml
inference/cce-infer-ast/src/: convert.rs  lib.rs  nodes.rs
inference/cce-infer-ast/tests/: test_convert.rs
inference/cce-infer/src/: deduce.rs  infer.rs  lib.rs  nodes.rs
inference/cce-infer/tests/: test_infer.rs
inference/cce-infer/tests/examples/: the.cce
inference/circelang-db/: Cargo.toml
inference/circelang-db/src/: impls.rs  lib.rs
lowlevel/cce-llast/: Cargo.toml
(+7 files in other folders)
