[package]
name = "ccec"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
cce-ast = { path = "../core/cce-ast", version = "0.0.1" }
cce-infer = { path = "../inference/cce-infer", version = "0.0.1" }
cce-infer-ast = { path = "../inference/cce-infer-ast", version = "0.0.1" }