[package]
name = "cce-infer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cce-infer-ast = { path = "../cce-infer-ast", version = "0.0.1" }
cce-ast = { path = "../../core/cce-ast", version = "0.0.1" }